# SplitNaira

./: .editorconfig  BACKEND_COMPLIANCE_AUDIT.md  PLATFORM_HARDENING_IMPLEMENTATION_PLAN.md  README.md  package-lock.json  package.json  pr_body.md  pr_body.txt  submit_pr.bat  submit_pr.sh
.github/: dependabot.yml
.github/workflows/: backend-deploy.yml  ci.yml  codeql-analysis.yml  contract-testnet-deploy.yml  dependency-audit.yml  frontend-ci.yml  mainnet-deploy.yml  testnet-integration.yml  user-onboarding-ci.yml
backend/: .prettierrc  README.md  eslint.config.mjs  package.json  tsconfig.json
backend/src/: index.ts  (+2 more)
contracts/: Cargo.toml  README.md  deployments.json  errors.rs  events.rs  hardening_tests.rs  lib.rs  tests.rs
contracts/dx_tooling/: Cargo.toml
contracts/dx_tooling/src/: compiler.rs  deployer.rs  lib.rs  simulator.rs  validator.rs
contracts/interface/: splitnaira.contract-interface.json
contracts/scripts/: analyze-contract.mjs  generate-interface.mjs
docs/: CONTRACTS_SCALE_CAPACITY_WAVE5.md  PLATFORM_HARDENING_DEPLOYMENT_CHECKLIST.md  PLATFORM_HARDENING_IMPLEMENTATION.md  SOROBAN_SETUP.md  WAVE5_COMPLETION_SUMMARY.md  backend-compliance-improvements.md  backend-deploy.md  cicd-reliability.md  contract-release-and-upgrade-runbook.md  deployment.md  environments.md  release-readiness-checklist.md
frontend/: README.md  RELIABILITY.md  next.config.mjs  package.json
runbooks/: production-readiness.md  rollback-guide.md
scripts/: deploy-testnet.sh  generate-contract-types.mjs  healthcheck.mjs  sync-contracts.sh  verify-data-integrity.mjs
(+122 files in other folders)
