[package]
name = "splitnaira-contracts"
version = "0.1.0"
edition = "2021"
description = "Soroban smart contracts for SplitNaira — royalty splitting on Stellar"
license = "MIT"
repository = "https://github.com/Split-Naira/SplitNaira"

[lib]
crate-type = ["cdylib", "rlib"]
name = "splitnaira_contract"
path = "lib.rs"

[features]
testutils = ["soroban-sdk/testutils"]

[dependencies]
# Pinned to an exact version to prevent silent breakage from minor/patch bumps.
# Soroban minor versions can change storage cost models, instruction limits, or
# XDR encoding in ways that break deployed contracts.
# To upgrade: test on testnet, update both entries below and Cargo.lock, then
# document the new version in contracts/README.md.
soroban-sdk = { version = "=20.5.0" }

[dev-dependencies]
derive_arbitrary = "1.3.2"
soroban-sdk = { version = "20.0.0", features = ["testutils"] }
dx_tooling = { path = "dx_tooling" }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
